Add file via upload

--- a/object-detection.ipynb
+++ b/object-detection.ipynb
@@ -856,8 +856,8 @@
         "input_size = 300\n",
         "\n",
         "#img_list, anno_list, phase, transform, anno_xml\n",
-        "train_dataset = MyDataset(train_img_list, train_anno_list, phase=\"train\", transform=DataTransform(input_size, color_mean), anno_xml=Anno_xml(classes))\n",
-        "val_dataset = MyDataset(val_img_list, val_anno_list, phase=\"val\", transform=DataTransform(input_size, color_mean), anno_xml=Anno_xml(classes))\n",
+        "train_dataset = Dataset(train_img_list, train_anno_list, phase=\"train\", transform=DataTransform(input_size, color_mean), anno_xml=Annotation_xml(classes))\n",
+        "val_dataset = Dataset(val_img_list, val_anno_list, phase=\"val\", transform=DataTransform(input_size, color_mean), anno_xml=Annotation_xml(classes))\n",
         "\n",
         "batch_size = 32\n",
         "train_dataloader = data.DataLoader(train_dataset, batch_size, shuffle=True, collate_fn=my_collate_fn)\n",
