--- a/object-detection.ipynb
+++ b/object-detection.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Copy of Object detection.ipynb",
+      "name": "Copy of Copy of Object detection.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -22,14 +22,14 @@
       "source": [
         "# !rm -rf data utils"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "p1cVrKadJyTM",
-        "outputId": "a62cdd7a-588b-4b09-a665-2bd89fda0113",
+        "outputId": "7e9ca5e5-3f6d-44bb-b5f5-e3bd96245046",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -56,16 +56,16 @@
         "with zipfile.ZipFile([*files.upload()][0], 'r') as zip_ref:\n",
         "    zip_ref.extractall()"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-89313787-9353-4549-911a-4cb347c725f4\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-5d4f0f62-c171-4fc9-868b-163de772b311\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-89313787-9353-4549-911a-4cb347c725f4\">\n",
+              "     <output id=\"result-5d4f0f62-c171-4fc9-868b-163de772b311\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -110,11 +110,11 @@
         "if not os.path.exists(weight_dir):\n",
         "    os.mkdir(weight_dir)\n",
         "\n",
-        "url = \"http://host.robots.ox.ac.uk/pascal/VOC/voc2012/VOCtrainval_11-May-2012.tar\"\n",
+        "url = \"https://s3.amazonaws.com/amdegroot-models/vgg16_reducedfc.pth\"\n",
         "target_path = os.path.join(weight_dir, \"vgg16_reducedfc.pth\")\n",
         "\n",
         "if not os.path.exists(target_path):\n",
-        "    urllib.request.urlretrieve('https://s3.amazonaws.com/amdegroot-models/vgg16_reducedfc.pth', target_path)\n",
+        "    urllib.request.urlretrieve(url, target_path)\n",
         "\n",
         "url = \"http://host.robots.ox.ac.uk/pascal/VOC/voc2012/VOCtrainval_11-May-2012.tar\"\n",
         "target_path = os.path.join(data_dir, \"VOCtrainval_11-May-2012.tar\")\n",
@@ -128,6 +128,36 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Cczq7AUlKY6k",
+        "outputId": "dab0df0c-9a28-4ea7-f7bc-e3474e36e983",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        }
+      },
+      "source": [
+        "!pip3 install torch==1.3.0 torchvision==0.4.1\n",
+        "!pip3 install 'pillow<7.0.0'"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: torch==1.3.0 in /usr/local/lib/python3.6/dist-packages (1.3.0)\n",
+            "Requirement already satisfied: torchvision==0.4.1 in /usr/local/lib/python3.6/dist-packages (0.4.1)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from torch==1.3.0) (1.18.5)\n",
+            "Requirement already satisfied: pillow>=4.1.1 in /usr/local/lib/python3.6/dist-packages (from torchvision==0.4.1) (6.2.2)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from torchvision==0.4.1) (1.15.0)\n",
+            "Requirement already satisfied: pillow<7.0.0 in /usr/local/lib/python3.6/dist-packages (6.2.2)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -973,10 +1003,32 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "beRbTISxV_cs"
+      },
+      "source": [
+        "url = \"https://images.unsplash.com/flagged/photo-1563831175532-76e760e1d291?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80\"\n",
+        "target_path = os.path.join(data_dir, \"cowboy.jpg\")\n",
+        "\n",
+        "if not os.path.exists(target_path):\n",
+        "    urllib.request.urlretrieve(url, target_path)\n",
+        "\n",
+        "from PIL import Image\n",
+        "\n",
+        "img = Image.open(target_path)\n",
+        "new_image = img.resize((300, 300))\n",
+        "new_image.save(target_path)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "W7WTZh75GQY4"
       },
       "source": [
         "# detect\n",
+        "\n",
         "\n",
         "classes = [\"aeroplane\", \"bicycle\", \"bird\",  \"boat\", \"bottle\", \n",
         "    \"bus\", \"car\", \"cat\", \"chair\", \"cow\", \"diningtable\",\n",
@@ -1040,8 +1092,19 @@
         "    cv2.destroyAllWindows()\n",
         "\n",
         "\n",
-        "img_file_path = \"./data/cowboy.jpg\"\n",
+        "img_file_path = target_path\n",
         "show_predict(img_file_path)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q_oMZN2DTt0_"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
