Add file via upload

--- a/object-detection.ipynb
+++ b/object-detection.ipynb
@@ -82,7 +82,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Saving SSD-Object-Detection-in-PyTorch-.zip to SSD-Object-Detection-in-PyTorch-.zip\n"
+            "Saving utils.zip to utils.zip\n"
           ],
           "name": "stdout"
         }
