--- a/object-detection.ipynb
+++ b/object-detection.ipynb
@@ -917,7 +917,7 @@
         "    epoch_train_loss = 0.0\n",
         "    epoch_val_loss = 0.0\n",
         "    logs = []\n",
-        "    for epoch in range(num_epochs+1):\n",
+        "    for epoch in range(num_epochs):\n",
         "        t_epoch_start = time.time()\n",
         "        t_iter_start = time.time()\n",
         "        print(\"---\"*20)\n",
@@ -1061,11 +1061,6 @@
         "id": "q_oMZN2DTt0_"
       },
       "source": [
-        "import os\n",
-        "import urllib.request\n",
-        "\n",
-        "data_dir = \"./data\"\n",
-        "\n",
         "url = \"https://images.unsplash.com/photo-1526038039141-92d734991065?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80\"\n",
         "target_path = os.path.join(data_dir, \"cowboy.jpg\")\n",
         "\n",
